<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="bottom|center_horizontal">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="320dip" android:layout_height="wrap_content"
		android:orientation="vertical" android:background="@drawable/edit_entry_background">
		<TextView android:text="@string/edit_task_name_label"
			android:id="@+id/edit_task_name_label" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/login_text_color"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<EditText android:text="My task name goes here" android:id="@+id/edit_task_name"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:textAppearance="?android:attr/textAppearanceMedium" />
		<CheckBox android:text="@string/edit_task_completed_checkbox"
			android:id="@+id/edit_task_completed_checkbox" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/login_text_color"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/buttons_table" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:stretchColumns="0,1">
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<Button android:text="@string/edit_task_button_save"
					android:id="@+id/edit_task_button_save" android:layout_width="wrap_content"
					android:layout_height="wrap_content"></Button>
				<Button android:text="@string/edit_task_button_cancel"
					android:id="@+id/edit_task_button_cancel" android:layout_width="wrap_content"
					android:layout_height="wrap_content"></Button>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>
