<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1.0"
		android:paddingTop="30dip" android:paddingLeft="10dip"
		android:paddingRight="10dip" android:paddingBottom="20dip"
		android:orientation="vertical" android:background="@color/login_screen_background">

		<TextView android:id="@+id/email_view"
			android:layout_marginLeft="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="@android:style/TextAppearance.Widget.TextView"
			android:textStyle="bold" android:text="@string/email_label"
			android:textColor="@color/login_text_color" />

		<EditText android:id="@+id/email_edit" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:scrollHorizontally="true"
			android:autoText="false" android:capitalize="none"
			android:singleLine="true" android:inputType="textEmailAddress" />

		<TextView android:id="@+id/password_view"
			android:layout_marginLeft="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="@android:style/TextAppearance.Widget.TextView"
			android:textStyle="bold" android:text="@string/password_label"
			android:textColor="@color/login_text_color" />

		<EditText android:id="@+id/password_edit"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:password="true" android:singleLine="true" />

		<CheckBox android:text="@string/login_remember_label"
			android:id="@+id/remember_me" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/login_text_color"
			android:textStyle="bold" />


		<Button android:text="@string/login_button_label" android:id="@+id/login_button"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<TextView android:text="Create SlimTimer account" android:id="@+id/login_create_account_text"
			android:paddingTop="15dp" android:layout_width="fill_parent"
			android:gravity="center" android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>
